WB-104 add four digit year error message

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -7,12 +7,12 @@ empty.bookDataFormData.isbn=ISBN is mandatory
 notvalid.bookDataFormData.edition=Edition is not valid
 notvalid.bookDataFormData.isbn=ISBN is not valid
 notvalid.bookDataFormData.yearOfPublication=Year is not valid
-invalid.length.bookDataFormData.yearOfPublication=Year is not valid
+invalid.length.bookDataFormData.yearOfPublication=Year must have four digits
 
 # Borrow book form
 notvalid.borrowCmd.isbn=ISBN is not valid
 empty.borrowCmd.isbn=ISBN is mandatory
-notvalid.borrowCmd.email=Email is not valid
+notvalid.borrowC md.email=Email is not valid
 empty.borrowCmd.email=Email is mandatory
 
 # Return all books form
