--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -5,14 +5,16 @@ empty.bookDataFormData.edition=Edition is mandatory
 empty.bookDataFormData.author=Author is mandatory
 empty.bookDataFormData.isbn=ISBN is mandatory
 notvalid.bookDataFormData.edition=Edition is not valid
+notnumeric.bookDataFormData.edition=Edition must be numeric
 notvalid.bookDataFormData.isbn=ISBN is not valid
 notvalid.bookDataFormData.yearOfPublication=Year is not valid
+notnumeric.bookDataFormData.yearOfPublication=Year must be numeric
 invalid.length.bookDataFormData.yearOfPublication=Year must have four digits
 
 # Borrow book form
 notvalid.borrowCmd.isbn=ISBN is not valid
 empty.borrowCmd.isbn=ISBN is mandatory
-notvalid.borrowC md.email=Email is not valid
+notvalid.borrowCmd.email=Email is not valid
 empty.borrowCmd.email=Email is mandatory
 
 # Return all books form
@@ -21,4 +23,4 @@ notvalid.returnAllBookFormData.emailAddress=Email is not valid
 
 # Default messages for custom validators
 de.codecentric.psd.worblehat.web.validation.ISBN=ISBN is not valid
-de.codecentric.psd.worblehat.web.validation.Numeric=Value has to be numeric
+de.codecentric.psd.worblehat.web.validation.Numeric=Value must be numeric
