--- a/worblehat-domain/pom.xml
+++ b/worblehat-domain/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-			<version>22.0</version>
+			<version>24.1-jre</version>
         </dependency>
 		<dependency>
 			<groupId>com.github.npathai</groupId>
