--- a/worblehat-web/src/main/resources/application.properties
+++ b/worblehat-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Spring WebApp Config
-server.context-path=/worblehat
+server.servlet.context-path=/worblehat
 
 # Database Config
 spring.datasource.url=jdbc:mysql://localhost:3306/worblehat_test
@@ -17,7 +17,7 @@ info.version=@pom.version@
 info.stage=test
 logging.file=/tmp/@pom.artifactId@.log
 spring.liquibase.change-log=classpath:master.xml
-liquibase.drop-first=true
+spring.liquibase.drop-first=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.thymeleaf.cache=false
 management.endpoints.web.exposure.include=*
