--- a/worblehat-web/src/main/resources/application.properties
+++ b/worblehat-web/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Spring WebApp Config
+server.servlet.path=/
 server.servlet.context-path=/worblehat
+server.servlet.contextPath=/worblehat
 
 # Database Config
 spring.datasource.url=jdbc:mysql://localhost:3306/worblehat_test
