--- a/worblehat-web/src/main/resources/application.properties
+++ b/worblehat-web/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.application.name=@pom.name@
 info.version=@pom.version@
 info.stage=test
 logging.file=/tmp/@pom.artifactId@.log
-spring.liquibase.change-log=classpath:master.xml
+liquibase.change-log=classpath:master.xml
 liquibase.drop-first=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.thymeleaf.cache=false
