WB-104 add isbn error code

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -6,7 +6,7 @@ empty.bookDataFormData.author=Author is mandatory
 empty.bookDataFormData.isbn=ISBN is mandatory
 notvalid.bookDataFormData.edition=Edition is not valid
 notnumeric.bookDataFormData.edition=Edition must be numeric
-notvalid.bookDataFormData.isbn=ISBN is not valid
+notvalid.bookDataFormData.isbn=ISBN must be a valid ISBN of 10 digits
 notvalid.bookDataFormData.yearOfPublication=Year is not valid
 notnumeric.bookDataFormData.yearOfPublication=Year must be numeric
 invalid.length.bookDataFormData.yearOfPublication=Year must have four digits
@@ -22,5 +22,5 @@ empty.returnAllBookFormData.emailAddress=Email is mandatory
 notvalid.returnAllBookFormData.emailAddress=Email is not valid
 
 # Default messages for custom validators
-de.codecentric.psd.worblehat.web.validation.ISBN=ISBN is not valid
+de.codecentric.psd.worblehat.web.validation.ISBN=ISBN must be a valid ISBN of 10 digits
 de.codecentric.psd.worblehat.web.validation.Numeric=Value must be numeric
