--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -1,5 +1,6 @@
 # Add book data from
 empty.bookDataFormData.title=Title is mandatory
+empty.bookDataFormData.description=Description is mandatory
 empty.bookDataFormData.yearOfPublication=Year is mandatory
 empty.bookDataFormData.edition=Edition is mandatory
 empty.bookDataFormData.author=Author is mandatory
