--- a/worblehat-web/src/main/resources/application.properties
+++ b/worblehat-web/src/main/resources/application.properties
@@ -20,3 +20,4 @@ liquibase.change-log=classpath:master.xml
 liquibase.drop-first=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.thymeleaf.cache=false
+build.version=@project.version@
