WB-117 ISBN 13 support und korrektur validierungs Nachricht

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -7,13 +7,13 @@ empty.bookDataFormData.author=Author is mandatory
 empty.bookDataFormData.isbn=ISBN is mandatory
 notvalid.bookDataFormData.edition=Edition is not valid
 notnumeric.bookDataFormData.edition=Edition must be numeric
-notvalid.bookDataFormData.isbn=ISBN must be a valid ISBN of 10 digits
+notvalid.bookDataFormData.isbn=ISBN must be a valid ISBN of 10 digits or 13 digits
 notvalid.bookDataFormData.yearOfPublication=Year is not valid
 notnumeric.bookDataFormData.yearOfPublication=Year must be numeric
 invalid.length.bookDataFormData.yearOfPublication=Year must have four digits
 
 # Borrow book form
-notvalid.borrowCmd.isbn=ISBN is not valid
+notvalid.borrowCmd.isbn=ISBN must be a valid ISBN of 10 digits or 13 digits
 empty.borrowCmd.isbn=ISBN is mandatory
 notvalid.borrowCmd.email=Email is not valid
 empty.borrowCmd.email=Email is mandatory
@@ -23,5 +23,5 @@ empty.returnAllBookFormData.emailAddress=Email is mandatory
 notvalid.returnAllBookFormData.emailAddress=Email is not valid
 
 # Default messages for custom validators
-de.codecentric.psd.worblehat.web.validation.ISBN=ISBN must be a valid ISBN of 10 digits
+de.codecentric.psd.worblehat.web.validation.ISBN=ISBN must be a valid ISBN of 10 digits or 13 digits
 de.codecentric.psd.worblehat.web.validation.Numeric=Value must be numeric
